Fix case link alignment

--- a/web/frontend/styles/cases.scss
+++ b/web/frontend/styles/cases.scss
@@ -52,7 +52,7 @@
         display: none;
     }
 
-    aside.footnote a {
+    aside.footnote > a {
         float: left;
     }
     img {
